<resources>
    <!-- Application wide -->
    <string name="app_name" translatable="false">My Movie DB</string>

    <!-- Action items -->
    <string name="action_about_us">About us</string>

    <!-- Splash screen -->
    <string name="splash_app_logo_description">Application logo</string>
    <string name="splash_api_unreachable">TMDB API not available</string>

    <!-- Credits screen -->
    <string name="credits_author_label">By</string>
    <string name="credits_author_name" translatable="false">Paulo Pereira</string>
    <string name="credits_author_linked_in" translatable="false">https://pt.linkedin.com/in/palbp</string>
    <string name="credits_author_photo_description">Photo of the author</string>
    <string name="credits_author_linked_in_description">LinkedIn logo</string>
    <string name="credits_data_source_url" translatable="false">https://www.themoviedb.org</string>
    <string name="credits_data_source_description">Powered by TMDB</string>

    <!-- Movie details screen -->
    <string name="movie_details_tools_movie_title" translatable="false">Some Movie Title</string>
    <string name="movie_details_tools_movie_rating" translatable="false">6.8 (10)</string>
    <string name="movie_details_tools_movie_description" translatable="false">Some movie description</string>
    <string name="movie_details_rating_image_description">Rating</string>

</resources>
